--- a/log.rmd
+++ b/log.rmd
@@ -680,7 +680,25 @@ or
 
 - revision letter
 
-I went through the three reports, making nearly all the changes suggested. Many of these were useful and I was happy to respond to them. 
-Here are the ones I didn't do:
- - R1: For reasons of word count, I wasn't able to include a detailed discussion of the Tesco user interface. Given my focus on propensities and ordering of recommendations, I wasn't sure that was so relevant. Footnote 3 has a description of how handwritten lists and writing lists have been understood by anthropologists and literary theorists. 
+I went through the three reports, making many of the changes suggested. Many of these were useful and I was happy to respond to them. 
+
+An overview of changes and discussion of suggestions I wasn't able to implement:
+ - R1: 
+     -  For reasons of word count, I wasn't able to include a detailed discussion of the Tesco user interface. Given my focus on propensities and ordering of recommendations, I wasn't sure that was so relevant. Footnote 3 has a description of how handwritten lists and writing lists have been understood by anthropologists and literary theorists. 
+     - R1 asked for literature on adaptive ecommerce systems to be included, which is fine (I included the references), but I didn't discuss this very much. Grocery shopping, as I point in the introduction differs in important ways from many typical e-commerce settings. 
  - R2: 
+    - to be honest, this was a difficult report to respond to. It occasioned me a lot of effort to deal with what seems a report coming from a very different starting point. I have tried, but it would require much more scaffolding to deal with them all. 
+    - R2 asked for 'specifics about how the analysis may translate to other personalization contexts, despite this being promised.' Although I did claim the case might be 'sociologically resonant,' I don't think I promised to translate to other personalization contexts. (Reading abstract, introduction and conclusion shows no sign of that promise.) It would be a significant new section of the paper to specify the general argument for other concrete contexts.  
+    - R2 found the borrowing and repurposing of the term 'conversion event' from the recommender system literature confusing. I've added a footnote to explain the motivation for this borrowing, but I probably won't be able to convince R2 of the value of a material-semiotic approach in which such dual-register terms are quite common. 
+    - R2 was concerned about extremely confusing methodology. I've added a sentence or two in the methodology section saying what the paper does. But I won't, I fear, be able to assuage R2's concerns. They don't countenance what I'm trying to do: ground a theoretical argument by assembling some empirical engagements -- the ethnographic event, the small experiments with Tesco APIs and recommender system models, the existing sociologies and anthropologies of shopping and lists and the archaeology of recommendation. Its not a conventional empirical research project, and the methodology of reconstruction that I use (borrowing from Dewey) is unlikely to satisfy narrowly defined sociological requirements. Given the methodological pluralism of the journal, I'm hoping that this is ok. 
+    - I've added a footnote with URL for the Github repository for the paper and its scripts. 
+    - R2 wasn't able to see what the ethnographic material adds to analysis.  They could refer to p3, li 44-48 (in pre-revision manuscript) where I set out how I understand it is as part of a 'big data conversion event.'
+    - R2 couldn't work out the 'intended meaning' of some key sentences. There was a grammar problem in these sentences, which I've fixed.
+
+## Mon 05 Feb 2018 08:07:19 GMT
+- responding to R2 today; 
+     - do I need a footnote on conversion event?
+
+     paragraph setting out the structure of the paper:
+
+     The argument develops in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both lists and shopping overflow individual identity. A brief archaeology of recommendation describes the shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The following section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. These range across calculations concerning the relation between products, between products and people,  
