writing overview section

--- a/log.rmd
+++ b/log.rmd
@@ -699,6 +699,6 @@ An overview of changes and discussion of suggestions I wasn't able to implement:
 - responding to R2 today; 
      - do I need a footnote on conversion event?
 
-     paragraph setting out the structure of the paper:
+     paragraph setting out the structure of the paper: this should on page 2. Just after the Hansen section is re-inserted. 
 
-     The argument develops in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both lists and shopping overflow individual identity. A brief archaeology of recommendation describes the shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The following section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. These range across calculations concerning the relation between products, between products and people,  
+     The argument develops in four main steps. The first main section introduces the case study -- the Tesco online grocery  recommender system as presented at an industry/academic conference -- as an instance of a conversion event. The second section frames grocery shopping in terms of sociological and anthropological accounts of shopping lists and social order, highlighting how both the constitutional incompleteness of lists as inscriptive devices and the group-structured relationality of shopping overflow operational notions of personalization. The key elements of contemporary recommender systems are introduced by a brief archaeology of recommendation described in terms of a shift from 1980s census-based data-mining to web-based recommender system at the turn of the century. The following section is the main body of the paper and approaches recommendations in terms of the different kinds of probability calculations that both target persons and somewhat overflow them. This section of the paper extends Popper's propensity-based account of probability in its contemporary ramifications through predictive models, platform-scale data processing for large numbers of customers, the problems of grocery lists in their combinatorial potentials, and the supra-individual potentials of recommendations.
